syntax = "proto3";

option csharp_namespace = "Basics";

package basics;

message Request{
	string Content=1;
}

message Response{
	string message=1;
}

service FirstServiceDefinition{
	rpc Unary(Request) returns (Response);
	rpc ClientSteam(stream Request) returns (Response);
	rpc ServerStream(Request) returns (stream Response);
	rpc BiDirectionalStream(stream Request) returns (stream Response);
}